2012-08-09  Jeff Law <law@redhat.com>

	[BZ #13939]
	* malloc.c/arena.c (reused_arena): New parameter, avoid_arena.
	When avoid_arena is set, don't retry in the that arena.  Pick the
	next one, whatever it might be.
	(arena_get2): New parameter avoid_arena, pass through to reused_arena.
	(arena_lock): Pass in new parameter to arena_get2.
	* malloc/malloc.c (__libc_memalign): Pass in new parameter to
	arena_get2.
	(__libc_malloc): Unify retrying after main arena failure with
	__libc_memalign version.
	(__libc_valloc, __libc_pvalloc, __libc_calloc): Likewise.

2012-08-09  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14166]
	* sysdeps/i386/i686/multiarch/strstr-c.c (strstr): Redefined
	to __redirect_strstr.
	(__strstr_sse42): Use typeof __redirect_strstr.
	(__strstr_ia32): Likewise.
	(__libc_strstr): New prototype.
	(strstr): Renamed to ...
	(__libc_strstr): This.
	(strstr): New strong alias of __libc_strstr.
	* sysdeps/x86_64/multiarch/strstr-c.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/time.c (time): Redefined to
	__redirect_time.
	Include <time.h>.
	(__libc_time): New prototype.
	(time_ifunc): Replace time with __libc_time.
	(time): New strong alias and hidden definition of __libc_time.
	(__GI_time): Remove strong alias.
	* sysdeps/x86_64/multiarch/memmove.c: Don't include <string.h>.
	Include <stddef.h>.
	(memmove): Redefined to __redirect_memmove.
	(__memmove_sse2): Use typeof __redirect_memmove.
	(__memmove_ssse3): Likewise.
	(__memmove_ssse3_back): Likewise.
	(__libc_memmove): New prototype.
	(memmove): Renamed to ...
	(__libc_memmove): This.
	(memmove): New strong alias of __libc_memmove.

2012-08-08  Mark Salter  <msalter@redhat.com>

	* elf/elf.h
	(R_MN10300_TLS_GD): Define.
	(R_MN10300_TLS_LD): Likewise.
	(R_MN10300_TLS_LDO): Likewise.
	(R_MN10300_TLS_GOTIE): Likewise.
	(R_MN10300_TLS_IE): Likewise.
	(R_MN10300_TLS_LE): Likewise.
	(R_MN10300_TLS_DTPMOD): Likewise.
	(R_MN10300_TLS_DTPOFF): Likewise.
	(R_MN10300_TLS_TPOFF): Likewise.